[gd_scene load_steps=30 format=3 uid="uid://3r620wirfx5j"]

[ext_resource type="Script" path="res://endless/endless.gd" id="1_c1edh"]
[ext_resource type="Script" path="res://endless/score_handler.gd" id="2_dssv2"]
[ext_resource type="FontFile" uid="uid://dg0wgobwcnhf1" path="res://assets/fonts/GravityBold8.ttf" id="3_0smea"]
[ext_resource type="FontFile" uid="uid://gaye3ibwfthw" path="res://assets/fonts/fibberish.ttf" id="4_6xmpa"]
[ext_resource type="Script" path="res://endless/achieve_popper/achieve_popper.gd" id="5_7r63p"]
[ext_resource type="AudioStream" uid="uid://b82ilmqxmlcla" path="res://assets/sounds/1up.wav" id="6_m02un"]
[ext_resource type="Texture2D" uid="uid://bc5kkbyknqa0o" path="res://assets/textures/bar-under.png" id="7_0lcwl"]
[ext_resource type="Texture2D" uid="uid://ckf3axdyd60bj" path="res://assets/textures/bar-fill.png" id="8_y6hv5"]
[ext_resource type="PackedScene" uid="uid://j5ampglym1at" path="res://goal/player_goal.tscn" id="9_ccjvh"]
[ext_resource type="PackedScene" uid="uid://bvopkx5b76dd6" path="res://player/player.tscn" id="10_bxptl"]
[ext_resource type="Script" path="res://endless/WindMomma.gd" id="11_ffql8"]
[ext_resource type="AudioStream" uid="uid://baiesrhjxoyw6" path="res://assets/music/throw-caution-to-the-wind.ogg" id="12_dbrpj"]
[ext_resource type="Script" path="res://endless/pause_menu/pause_menu.gd" id="13_nyes4"]
[ext_resource type="AudioStream" uid="uid://cujcp3l4en5m4" path="res://assets/music/wind-of-change.ogg" id="14_ubk2e"]
[ext_resource type="PackedScene" uid="uid://cmamu5udwoaqb" path="res://main_menu/options/options_menu.tscn" id="15_2210x"]

[sub_resource type="Gradient" id="Gradient_6u8cl"]
offsets = PackedFloat32Array(0, 0.24, 0.25, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="Curve" id="Curve_it4fr"]
_data = [Vector2(0, 0.2), 0.0, 0.0, 0, 0, Vector2(0.25, 0.75), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(0.75, 0), 0.0, 0.0, 0, 0, Vector2(0.8, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pocrq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ty4sl"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yveu"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nml7"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpfxu"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwkxi"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.25098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6kcy"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(1, 1, 1, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6y7ge"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8xcy0"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5aiac"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1og74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koyjs"]
bg_color = Color(0, 0, 0, 0.501961)

[node name="Endless" type="Node2D" node_paths=PackedStringArray("time_timer", "life_timer", "timer_bar", "wind_momma", "player", "player_goal", "score_handler", "gameover_label", "multiplier_label", "timer_label", "retry_butt", "back_butt", "pause_butt")]
script = ExtResource("1_c1edh")
timer_gradient = SubResource("Gradient_6u8cl")
time_timer = NodePath("TimerTimer")
life_timer = NodePath("LifeTimer")
timer_bar = NodePath("BGColor/MarginContainer/VBoxContainer/TimerBar")
wind_momma = NodePath("WindMomma")
player = NodePath("Player")
player_goal = NodePath("PlayerGoal")
score_handler = NodePath("ScoreHandler")
gameover_label = NodePath("BGColor/MarginContainer/CenterContainer/VBoxContainer/GAMEOVER")
multiplier_label = NodePath("BGColor/MarginContainer/Multiplier")
timer_label = NodePath("BGColor/MarginContainer/Time")
retry_butt = NodePath("BGColor/MarginContainer/Retry")
back_butt = NodePath("BGColor/MarginContainer/Back")
pause_butt = NodePath("BGColor/MarginContainer/Pause")

[node name="TimerTimer" type="Timer" parent="."]
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="ScoreHandler" type="Node" parent="." node_paths=PackedStringArray("player", "player_goal", "life_timer", "multiplier_label", "score_label", "timer_bar")]
script = ExtResource("2_dssv2")
timer_multiplier_curve = SubResource("Curve_it4fr")
player = NodePath("../Player")
player_goal = NodePath("../PlayerGoal")
life_timer = NodePath("../LifeTimer")
multiplier_label = NodePath("../BGColor/MarginContainer/Multiplier")
score_label = NodePath("../BGColor/MarginContainer/CenterContainer/VBoxContainer/Score")
timer_bar = NodePath("../BGColor/MarginContainer/VBoxContainer/TimerBar")

[node name="BGColor" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(256, 256)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pocrq")

[node name="MarginContainer" type="MarginContainer" parent="BGColor"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Pause" type="Button" parent="BGColor/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_ty4sl")
theme_override_styles/hover = SubResource("StyleBoxFlat_2yveu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4nml7")
theme_override_styles/focus = SubResource("StyleBoxFlat_2yveu")
text = "pause"

[node name="Time" type="RichTextLabel" parent="BGColor/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/normal_font = ExtResource("4_6xmpa")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave]00:00"
fit_content = true
autowrap_mode = 0

[node name="Multiplier" type="RichTextLabel" parent="BGColor/MarginContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/normal_font = ExtResource("4_6xmpa")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave]x1.5"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="BGColor/MarginContainer"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BGColor/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="GAMEOVER" type="RichTextLabel" parent="BGColor/MarginContainer/CenterContainer/VBoxContainer"]
visible = false
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/normal_font = ExtResource("4_6xmpa")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][shake rate=16 level=12]GAME OVER!"
fit_content = true
autowrap_mode = 0

[node name="Score" type="RichTextLabel" parent="BGColor/MarginContainer/CenterContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_shadow_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/normal_font = ExtResource("4_6xmpa")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][shake rate=10 level=24]0"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BGColor/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="AchievePopper" type="VBoxContainer" parent="BGColor/MarginContainer/VBoxContainer" node_paths=PackedStringArray("achieve_sound")]
layout_mode = 2
script = ExtResource("5_7r63p")
achieve_sound = NodePath("Achieve")

[node name="Achieve" type="AudioStreamPlayer" parent="BGColor/MarginContainer/VBoxContainer/AchievePopper"]
stream = ExtResource("6_m02un")
volume_db = -5.0
pitch_scale = 2.0
bus = &"sfx"

[node name="TimerBar" type="TextureProgressBar" parent="BGColor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 8
max_value = 12.0
step = 0.01
value = 12.0
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("7_0lcwl")
texture_progress = ExtResource("8_y6hv5")

[node name="Retry" type="Button" parent="BGColor/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "RETRY?"

[node name="Back" type="Button" parent="BGColor/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "MENU?
"

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2(3, 128)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
shape = SubResource("WorldBoundaryShape2D_6y7ge")

[node name="WallUp" type="StaticBody2D" parent="."]
position = Vector2(128, 3)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp"]
shape = SubResource("WorldBoundaryShape2D_8xcy0")

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2(253, 128)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
shape = SubResource("WorldBoundaryShape2D_5aiac")

[node name="WallDown" type="StaticBody2D" parent="."]
position = Vector2(128, 253)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDown"]
shape = SubResource("WorldBoundaryShape2D_1og74")

[node name="PlayerGoal" parent="." instance=ExtResource("9_ccjvh")]
position = Vector2(128, 128)

[node name="Player" parent="." instance=ExtResource("10_bxptl")]
position = Vector2(128, 128)

[node name="WindMomma" type="Node2D" parent="." node_paths=PackedStringArray("player", "player_goal") groups=["wind_momma"]]
script = ExtResource("11_ffql8")
gust_count = 50
player = NodePath("../Player")
player_goal = NodePath("../PlayerGoal")

[node name="FunnyTimer" type="Timer" parent="WindMomma"]
wait_time = 10.0
autostart = true

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_dbrpj")
autoplay = true
bus = &"music"

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="PanelContainer" parent="UI" node_paths=PackedStringArray("options_menu")]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_koyjs")
script = ExtResource("13_nyes4")
options_menu = NodePath("../OptionsMenu")

[node name="CenterContainer" type="CenterContainer" parent="UI/PauseMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "RESUME"

[node name="Menu" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "TO MENU"

[node name="paused" type="RichTextLabel" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_6xmpa")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center][rainbow][wave amp=64 freq=2.5]paused"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Options" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "OPTIONS"

[node name="Restart" type="Button" parent="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_0smea")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wpfxu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nwkxi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s6kcy")
theme_override_styles/focus = SubResource("StyleBoxFlat_nwkxi")
text = "Restart"

[node name="PauseMusik" type="AudioStreamPlayer" parent="UI/PauseMenu"]
process_mode = 2
stream = ExtResource("14_ubk2e")
autoplay = true
bus = &"music"

[node name="OptionsMenu" parent="UI" instance=ExtResource("15_2210x")]
visible = false

[connection signal="game_over" from="." to="UI/PauseMenu" method="_on_main_game_over"]
[connection signal="timeout" from="TimerTimer" to="." method="_on_timer_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="score_updated" from="ScoreHandler" to="." method="_on_score_handler_score_updated"]
[connection signal="score_updating" from="ScoreHandler" to="." method="_on_score_handler_score_updating"]
[connection signal="pressed" from="BGColor/MarginContainer/Pause" to="UI/PauseMenu" method="_on_pause_pressed"]
[connection signal="pressed" from="BGColor/MarginContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="BGColor/MarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="collected" from="PlayerGoal" to="." method="_on_player_goal_collected"]
[connection signal="collected" from="PlayerGoal" to="ScoreHandler" method="_on_player_goal_collected"]
[connection signal="bumped_wall" from="Player" to="." method="_on_player_bumped_wall"]
[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="hurt" from="Player" to="ScoreHandler" method="_on_player_hurt"]
[connection signal="timeout" from="WindMomma/FunnyTimer" to="WindMomma" method="_on_funny_timer_timeout"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer/Resume" to="UI/PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer/Menu" to="UI/PauseMenu" method="_on_menu_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer2/Options" to="UI/PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/VBoxContainer/HBoxContainer2/Restart" to="UI/PauseMenu" method="_on_restart_pressed"]
[connection signal="confirmed" from="UI/OptionsMenu" to="UI/PauseMenu" method="_on_options_menu_confirmed"]
